# mlops-trabajo6

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
app/: main.py  model.py  schemas.py
tests/: test_api.py
