[project]
name = "mlops-6"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
